Ajuste no README -> Instruções para o Executável