@@ -12,3 +12,9 @@ Apache: https://tomcat.apache.org/download-10.cgi
 MySQL: https://dev.mysql.com/downloads/installer/
 
 JavaFX: Site Gluon
+
+Gerar o Executável:
+1)Exportar o  Java/Runnable JAR file do Projeto selecionando a classe Main
+2)Colocar o dbproperties/MySQL Connector/JavaFX SDK/Java SDK na pasta
+3)Conferir o JAVA_HOME e o PATH_TO_FX
+4)Rodar no CMD: java --module-path %PATH_TO_FX% --add-modules javafx.controls,javafx.fxml -cp nomeDoJar.jar application.Main
